@@ -34,7 +34,7 @@ from PyQt4.uic import loadUiType
 import vitables.utils
 
 translate = QtGui.QApplication.translate
-# This method of the PyQt4.uic module allows for dinamically loading user 
+# This method of the PyQt4.uic module allows for dinamically loading user
 # interfaces created by QtDesigner. See the PyQt4 Reference Guide for more
 # info.
 Ui_LeafPropPage = \
@@ -63,7 +63,7 @@ class LeafPropPage(QtGui.QWidget, Ui_LeafPropPage):
     ``numpy`` data types because `PyTables` attributes are stored as ``numpy``
     arrays.
 
-    :Parameter info: a :meth:`vitables.nodeprops.nodeinfo.NodeInfo` instance 
+    :Parameter info: a :meth:`vitables.nodeprops.nodeinfo.NodeInfo` instance
       describing a given node
     """
 
@@ -83,7 +83,7 @@ class LeafPropPage(QtGui.QWidget, Ui_LeafPropPage):
 
         The page contains two groupboxes that are laid out vertically.
 
-        :Parameter info: a :meth:`vitables.nodeprops.nodeinfo.NodeInfo` instance 
+        :Parameter info: a :meth:`vitables.nodeprops.nodeinfo.NodeInfo` instance
           describing a given node
         """
 
@@ -110,11 +110,11 @@ class LeafPropPage(QtGui.QWidget, Ui_LeafPropPage):
             table.setStyleSheet("background-color: {0}".format(bg_name))
             self.fields_model = QtGui.QStandardItemModel()
             self.fields_model.setHorizontalHeaderLabels([
-                translate('LeafPropPage', 'Field name', 
-                'First column header of the table'), 
-                translate('LeafPropPage', 'Type', 
-                'Second column header of the table'), 
-                translate('LeafPropPage', 'Shape', 
+                translate('LeafPropPage', 'Field name',
+                'First column header of the table'),
+                translate('LeafPropPage', 'Type',
+                'Second column header of the table'),
+                translate('LeafPropPage', 'Shape',
                 'Third column header of the table')])
             table.setModel(self.fields_model)
 
@@ -138,7 +138,7 @@ class LeafPropPage(QtGui.QWidget, Ui_LeafPropPage):
                             str(info.columns_types[pathname]))
                     shape_item = QtGui.QStandardItem(\
                                         str(info.columns_shapes[pathname]))
-                self.fields_model.appendRow([pathname_item, type_item, 
+                self.fields_model.appendRow([pathname_item, type_item,
                                             shape_item])
 
 
