@@ -9,6 +9,8 @@ The package docbrowser has been analyzed with pylint.
 
 The package h5db has been analyzed with pylint.
 
+The package nodeprops has been analyzed with pylint.
+
 ** September 25, 2013 **
 Refactoring module names to follow PEP 8.
 nodeInfo.py -> nodeinfo.py
